--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.1.0",
     "lodash": "^4.15.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.1",
