--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A grid component for react",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha -w test/helpers/browser.js test/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,12 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
+    "jsdom": "^9.4.2",
+    "mocha": "^3.0.2",
+    "react-addons-test-utils": "^15.3.1",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
